--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Welcome Jose</h1>
   <p>We're gonna start a company one day!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://j.gifs.com/vOAqxl.gif"/>
 </body>
  
 </html>
